# shoot-for-the-stars

./: Cargo.toml  LICENSE.md  README.md
src/: components.rs  main.rs  systems.rs  utils.rs
src/game/: components.rs  mod.rs  systems.rs
src/game/enemy/: components.rs  mod.rs  systems.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/score/: mod.rs  resources.rs  systems.rs
src/game/star/: components.rs  mod.rs  systems.rs
src/game/ui/: mod.rs
src/game/ui/game_over_menu/: components.rs  mod.rs  styles.rs
src/game/ui/game_over_menu/systems/: interactions.rs  layout.rs
src/game/ui/hud/: components.rs  mod.rs  styles.rs
src/game/ui/hud/systems/: layout.rs  updates.rs
src/game/ui/pause_menu/: components.rs  mod.rs  styles.rs
src/game/ui/pause_menu/systems/: interactions.rs  layout.rs
src/main_menu/: mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/player/: mod.rs  systems.rs
src/score/: mod.rs
src/star/: mod.rs  systems.rs
